    core.

    Fix typo in SYNOPSIS (colorstrip example).  Thanks, Olivier Mengué.
    (#94006)

    Skip POD and some other style tests unless doing automated or release
    testing.  Skip POD spelling, coverage, and Perl::Critic tests unless
    doing author testing.  Use the Lancaster Consensus environment
    variables instead of RRA_MAINTAINER_TESTS.  (#93474)

Term::ANSIColor 4.02 (2013-01-07)

    When testing 256-color support, list the tag first in the import list
    for compatibility with the Exporter from Perl 5.6.2.  Thanks to David
    Cantrell for the testing and debugging.

    Add the minimum Perl version to the package metadata.

Term::ANSIColor 4.01 (2012-12-31)

    Fix logic for skipping tests when Test::Warn is not installed.

Term::ANSIColor 4.00 (2012-12-30)

    Add constants (with tag :constants256) and attributes for 256-color
    emulators.  Thanks, Kurt Starsinic.

    Add support for custom color names configured with either a new
    function, coloralias, or the ANSI_COLORS_ALIASES environment variable
    as set during module load.  Thanks, Stephen Tirlwall.

    Only honor ANSI_COLORS_DISABLED if it is set to a true value.

    The module now requires Perl 5.6 or later and makes use of Perl 5.6
    features.

    Replace the AUTOLOAD support for ANSI_COLORS_DISABLED with generation
    of constant subs that check for ANSI_COLORS_DISABLED when they're
    called.  This fixes behavior if the constant were used before the
    environment variable was set and then used again afterwards.

    PUSHCOLOR now takes an array like all the other constant functions and
    joins all arguments together before manipulating them, making behavior
    more consistent in some edge cases.

    $AUTOLOCAL now takes precedence over $AUTORESET, reversing the
    previous behavior.  It is also now properly documented.

    Add a COMPATIBILITY section to the documentation collecting all